# nft-staking

./: Cargo.toml  README.md
contracts/nft-vault/: Cargo.toml  README.md
contracts/nft-vault/src/: claim.rs  contract.rs  error.rs  helpers.rs
contracts/passage-nft-vault/: Cargo.toml  README.md
contracts/passage-nft-vault/src/: contract.rs  events.rs  helpers.rs  lib.rs  state.rs
contracts/passage-stake-rewards/: Cargo.toml  README.md
contracts/passage-stake-rewards/src/: contract.rs  error.rs  events.rs
contracts/passage-vault-factory/: Cargo.toml  README.md
contracts/passage-vault-factory/src/: contract.rs  error.rs  events.rs  lib.rs
contracts/stake-rewards/: Cargo.toml  README.md
contracts/stake-rewards/src/: contract.rs  events.rs  lib.rs  state.rs
contracts/vault-factory/: Cargo.toml  README.md
contracts/vault-factory/src/: contract.rs  error.rs
scripts/: optimize-arm.sh  optimize.sh  schema.sh
unit-tests/: Cargo.toml
unit-tests/src/: lib.rs
unit-tests/src/setup/: mod.rs  setup.rs  setup_accounts.rs  setup_contracts.rs
unit-tests/src/stake_tests/: mod.rs  rewards_tests.rs  stake_tests.rs
