[package]
name       = "unit-tests"
version    = "0.1.0"
edition    = { workspace = true }
repository = { workspace = true }
license    = { workspace = true }

[dependencies]
anyhow         = { workspace = true }
cosmwasm-std   = { workspace = true }
nft-vault      = { workspace = true }
stake-rewards  = { workspace = true }
uju-cw2-common = { workspace = true }


[dev-dependencies]
cw-multi-test = { workspace = true }
