[package]
name        = "nft-vault"
authors     = ["Tasio Victoria <tasiovictoria@ujulabs.com>"]
edition     = "2018"
description = "Contract for staking native tokens"
version     = "0.1.0"
license     = { workspace = true }
repository  = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw2             = { workspace = true }
cw-address-like = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils        = { workspace = true }
schemars        = { workspace = true }
serde           = { workspace = true }
sha2            = { workspace = true }
sylvia          = { workspace = true, features = ["mt"] }
stake-rewards   = { workspace = true }
thiserror       = { workspace = true }
uju-cw2-common  = { workspace = true }
uju-cw2-nft     = { workspace = true }
uju-index-query = { workspace = true }
